Corrected image size on iOS

--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -35,15 +35,20 @@
 .modalwindow {
     max-width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    flex-wrap: wrap;
+    align-items: center;
     text-align: center;
 }
 
 .modalimage {
+    margin-left: auto;
+    margin-right: auto;
     flex-shrink: 3;
-    max-height: 60vh;
+    justify-self: center;
+    align-self: flex-start;
     max-width: 100%;
+    max-height: 60vh;
 }
 
 .closebutton {
